Corrected a few bugs such as not clearing welcome message when signed out and simple layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,6 @@ img {
 	height: 300px;
 }
 
-#in, #out {
-	text-align: right;
+#user-message {
+	color: #ffffff;
 }
